<resources>
	<string name="app_name">Wash</string>
	<string name="action_settings">Settings</string>
	<string name="bottom_tab1">洗衣</string>
	<string name="bottom_tab2">烘干</string>
	<string name="bottom_tab3">设置</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="login">管理员登录</string>
	<string name="tv_username">用户:</string>
	<string name="tv_password">密码:</string>
	<string name="bt_log">登录</string>
	<string name="bt_exit">取消</string>
	<string name="et_username">输入用户名</string>
	<string name="et_password">输入密码</string>
    <string name="title_activity_setting">setting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
	<string name="confirm">确认</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>